[package]
name = "crashe"
version = "0.1.0"
authors = ["Hadrien G. <knights_of_ni@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genawaiter = "0.99"
space-filler = { git = "https://github.com/HadrienG2/space-filler.git" }
