[package]
name = "cachot"
version = "0.1.0"
authors = ["Hadrien G. <knights_of_ni@gmx.com>"]
edition = "2021"
rust-version = "1.57.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed = { version = "1.5", features = ["num-traits"] }
genawaiter = "0.99"
num-traits = "0.2"
rand = "0.8"
space-filler = { git = "https://github.com/HadrienG2/space-filler.git" }
slotmap = "1.0"
static_assertions = "1.1"

[profile.release]
debug = true
lto = "fat"
panic = "abort"
